--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,23 @@
 <body>
   <nav class="topnav">
     <h1>NY Times Scraper</h1>
-    <button id='getArticles'>Scrape new Articles</button>
-    //On click run scrape function (basically fetch('/scrape')- which triggers app.get in backend
- 
-    <button id='getArticles'>Show Articles</button>
-    //On click run getArticle function (fetch('/articles')- which will trigger app.get(database- findAll()))
- 
+    <button id='getArticles' onclick=scrapeArticles()>Scrape new Articles</button>
+    <!-- On click run scrape function (basically fetch('/scrape')- which triggers app.get in backend -->
+
+    <button id='getArticles' onclick=getArticles()>Show Articles</button>
+    <!-- On click run getArticle function (fetch('/articles')- which will trigger app.get(database- findAll())) -->
   </nav>
+  <script>
+    const scrapeArticles = _ => {
+      console.log('Scrape Articles Working')
+      fetch('/scrape')
+        .then(r => r.json('articles'))
+        
+    }
+
+    const getArticles = _ => {
+      console.log('Get Articles Working')
+    }
+  </script>
 </body>
 </html>
